[Dinesh/Saran] Added fav-icon and title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>RecruitX</title>
+    <link rel="shortcut icon" href="./../public/images/icon.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
