--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <base href="/">
     <title>RecruitX</title>
     <link rel="shortcut icon" href="./../public/images/icon.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
